--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,6 +5,9 @@ html {
   font-size: 1em;
   line-height: 1.4;
 }
+body {
+  overflow-x: hidden;
+}
 
 
 ::-moz-selection {
